--- a/config.json.example
+++ b/config.json.example
@@ -1,10 +1,10 @@
 {
   "mastodon": {
-    "instance": "planet.moe",
+    "instance": "fedimas.com",
     "client_key": "clientKey",
     "client_secret": "clientSecret",
     "access_token": "accessToken",
-    "owner": "@bombwhale@planet.moe",
+    "owner": "@gorae@fedimas.com",
     "insert_emoji": true
   },
   "twitter": {
