--- a/config.json.example
+++ b/config.json.example
@@ -5,7 +5,8 @@
     "client_secret": "clientSecret",
     "access_token": "accessToken",
     "owner": "@gorae@fedimas.com",
-    "insert_emoji": true
+    "insert_emoji": true,
+    "visibility": "unlisted"
   },
   "twitter": {
     "client_id": "clientID",
